series administration now shows series visibility directly Issue #OPUSVIER-2327 - Sichtbarkeitsstatus der einzelnen Schriftenreihen in der Administration farblich kennzeichnen
git-svn-id: https://svn.zib.de/opus4dev/server/trunk@10127 0a49f362-4213-0410-86e3-e96cb6c4fbae

--- a/public/layouts/opus4/css/admin.css
+++ b/public/layouts/opus4/css/admin.css
@@ -295,11 +295,17 @@
     padding: 1em;
 }
 
-.adminContainer table.collections td.visible, .adminContainer table.collections td.visible a {
+.adminContainer table.collections td.visible,
+.adminContainer table.collections td.visible a,
+.adminContainer table.series td.visible,
+.adminContainer table.series td.visible a {
     color: green;
 }
 
-.adminContainer table.collections td.unvisible, .adminContainer table.collections td.unvisible a {
+.adminContainer table.collections td.unvisible,
+.adminContainer table.collections td.unvisible a,
+.adminContainer table.series td.unvisible,
+.adminContainer table.series td.unvisible a {
     color: red;
 }
 
